<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="0dp"
                android:paddingLeft="20dp"
                android:paddingTop="0dp" >

                <Button
                    android:id="@+id/connect"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/connect" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="0dp"
                android:paddingLeft="20dp"
                android:paddingTop="0dp" >

                <Button
                    android:id="@+id/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/reset" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingBottom="0dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="0dp" >

                    <Button
                        android:id="@+id/graph"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:text="@string/graph" />


                </RelativeLayout>



            </LinearLayout>

        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingTop="40dp"
        android:background="@android:color/darker_gray" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:paddingLeft="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:text="@string/Rssi" />

            <TextView
                android:id="@+id/rssiValue"
                android:layout_width="60dp"
                android:layout_height="wrap_content"

                android:text="@string/rssiValue" />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:text="Connection Time" />

            <TextView
                android:id="@+id/connTime"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="----" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/AnalogIn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/AnalogIn1" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingTop="0dp" >

                <TextView
                    android:id="@+id/AIText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:text="@string/AIText" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/AnalogIn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/AnalogIn2" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingTop="0dp" >

                <TextView
                    android:id="@+id/AIText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:text="@string/AIText" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/AnalogIn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/AnalogIn3" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingTop="0dp" >

                <TextView
                    android:id="@+id/AIText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:text="@string/AIText"
                    android:numeric="decimal" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/AnalogIn4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/AnalogIn4" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingTop="0dp" >

                <TextView
                    android:id="@+id/AIText4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:text="@string/AIText" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/AnalogIn5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/AnalogIn5"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/AIText5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:text="@string/AIText" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/AnalogIn6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/AnalogIn6" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/AIText6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:text="@string/AIText" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/AnalogIn7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/AnalogIn7" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/AIText7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:text="@string/AIText" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/export"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:text="@string/export" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.tayjiaxi.bletrial1.bletrial1.SimpleControls">

            <com.jjoe64.graphview.GraphView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:id="@+id/scatterPlot"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>

</ScrollView>